<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addAct"
            type="com.khb.customburger.activity.AddActivity" />
        <variable
            name="burgerVM"
            type="com.khb.customburger.viewmodel.BurgerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#232323"
        tools:context=".activity.AddActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/makeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/cabbageCard"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.cabbage}"
                        android:onClick="@{burgerVM::checkCabbage}"
                        android:layout_marginRight="4dp"
                        app:materialImage="@drawable/cabbage"
                        app:materialText="@string/cabbage"/>
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/cheeseCard"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.cheese}"
                        android:onClick="@{burgerVM::checkCheese}"
                        android:layout_marginLeft="4dp"
                        app:materialImage="@drawable/cheese"
                        app:materialText="@string/cheese"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/shrimpCard"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.shrimp}"
                        android:onClick="@{burgerVM::checkShrimp}"
                        android:layout_marginRight="4dp"
                        app:materialImage="@drawable/shrimp"
                        app:materialText="@string/shrimp"/>
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/tomatoCard"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.tomato}"
                        android:onClick="@{burgerVM::checkTomato}"
                        android:layout_marginLeft="4dp"
                        app:materialImage="@drawable/tomato"
                        app:materialText="@string/tomato"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/pattyCard1"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.porkPatty}"
                        android:onClick="@{burgerVM::checkPatty1}"
                        android:layout_marginRight="4dp"
                        app:materialImage="@drawable/patty01"
                        app:materialText="@string/patty01"/>
                    <com.khb.customburger.custom.BurgerCardView
                        android:id="@+id/pattyCard2"
                        android:layout_width="186dp"
                        android:layout_height="226dp"
                        android:layout_weight="1"
                        checkSelected="@{burgerVM.chickenPatty}"
                        android:onClick="@{burgerVM::checkPatty2}"
                        android:layout_marginLeft="4dp"
                        app:materialImage="@drawable/patty02"
                        app:materialText="@string/patty02"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/makeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/make_button"
            android:onClick="@{addAct::startMainActivity}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>